--- a/MyCity4Kids/MyCity4Kids/res/values-kn/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-kn/strings.xml
@@ -1333,4 +1333,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="all_insta_share_clipboard_msg">Caption copied. Please paste before posting on Instagram.</string>
     <string name="moderation_or_share_story_moderation_message">ನಿಮ್ಮ ಲೇಖನವನ್ನು ಅನುಮೋದನೆಗೆ ಕಳುಹಿಸಲಾಗಿದೆ.  ಮುಂದಿನ 24 ಗಂಟೆಗಳ ಒಳಗೆ ನಿಮ್ಮ ಲೇಖನದ ಅನುಮೋದನೆ ಕುರಿತು ಇಮೇಲ್ ನಿರೀಕ್ಷಿಸಿ.</string>
     <string name="ad.bottom_bar.instagram">ಇನ್ಸ್ಟಾಗ್ರಾಮ್</string>
+    <string name="editor_minimum_word_limit">Please write at least %1$d words to continue</string>
 </resources>
