--- a/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
@@ -1291,4 +1291,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="all_insta_share_clipboard_msg">Caption copied. Please paste before posting on Instagram.</string>
     <string name="moderation_or_share_story_moderation_message">आपली कथा नियंत्रणासाठी आहे. आपल्याला कथेच्या स्थितीसंदर्भात 24 तासांच्या आत ईमेल प्राप्त होईल</string>
     <string name="ad.bottom_bar.instagram">इन्स्टाग्राम</string>
+    <string name="editor_minimum_word_limit">Please write at least %1$d words to continue</string>
 </resources>
