--- a/MyCity4Kids/MyCity4Kids/res/values-pa/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-pa/strings.xml
@@ -1356,4 +1356,6 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="moderation_or_share_story_moderation_message">ਤੁਹਾਡੀ ਕਹਾਣੀ ਮੋਡਰੇਸ਼ਨ ਅਧੀਨ ਹੈ। ਤੁਸੀਂ ਕਹਾਣੀ ਦੀ ਸਥਿਤੀ ਦੇ ਸੰਬੰਧ ਵਿੱਚ 24 ਘੰਟਿਆਂ ਦੇ ਅੰਦਰ ਇੱਕ ਈਮੇਲ ਪ੍ਰਾਪਤ ਕਰੋਗੇ</string>
     <string name="ad.bottom_bar.instagram">ਇੰਸਟਾਗ੍ਰਾਮ</string>
     <string name="editor_minimum_word_limit">Please write at least %1$d words to continue</string>
+    <string name="all_copy_link">COPY LINK</string>
+    <string name="ss_story_link_copied">Story link copied</string>
 </resources>
