--- a/MyCity4Kids/MyCity4Kids/res/values-bn/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-bn/strings.xml
@@ -1299,4 +1299,6 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="moderation_or_share_story_moderation_message">আপনার গল্পটি মডারেশনে আছে।আপনার গল্পটি কোন পর্যায়ে আছে তা আগামী ২৪ ঘন্টার মধ্যে আপনাকে মেইল করে জানানো হবে</string>
     <string name="ad.bottom_bar.instagram">ইনস্টাগ্রাম</string>
     <string name="editor_minimum_word_limit">Please write at least %1$d words to continue</string>
+    <string name="all_copy_link">COPY LINK</string>
+    <string name="ss_story_link_copied">Story link copied</string>
 </resources>
