--- a/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
@@ -1315,4 +1315,6 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="moderation_or_share_story_moderation_message">आपकी कहानी मोडरेशन प्रक्रिया में है ,आपको आपकी कहानी  की स्थिति के  बारे में अगले 24 घंटे में  मेल किया जाएगा</string>
     <string name="ad.bottom_bar.instagram">इन्स्टाग्राम</string>
     <string name="editor_minimum_word_limit">Please write at least %1$d words to continue</string>
+    <string name="all_copy_link">COPY LINK</string>
+    <string name="ss_story_link_copied">Story link copied</string>
 </resources>
