--- a/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
@@ -1291,4 +1291,6 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="moderation_or_share_story_moderation_message">உங்கள் கதை மதிவாய்வுக்கு அனுப்பப்பட்டுள்ளது. இன்னும் 24 மணி நேரத்திற்குள் கதையின் நிலை குறித்த மின்னஞ்சல் உங்களை வந்தடையும்.</string>
     <string name="ad.bottom_bar.instagram">இன்ஸ்டாகிராம்</string>
     <string name="editor_minimum_word_limit">Please write at least %1$d words to continue</string>
+    <string name="all_copy_link">COPY LINK</string>
+    <string name="ss_story_link_copied">Story link copied</string>
 </resources>
