--- a/MyCity4Kids/MyCity4Kids/res/values-kn/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-kn/strings.xml
@@ -1343,4 +1343,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="ss_coachmarks_text_style">Change font size or text alignment</string>
     <string name="article_editor_min_words_body">You have written %1$d words. Please write at least 300 words to publish.</string>
     <string name="enter_valid_instagram_campaign_detail_fragment_popup">Please enter a valid Instagram handle</string>
+    <string name="select_category">Select Category</string>
 </resources>
