langwise logo for storysharecard + replaced city selection to google places API

--- a/MyCity4Kids/MyCity4Kids/res/values-kn/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-kn/strings.xml
@@ -1336,4 +1336,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="editor_minimum_word_limit">Please write at least %1$d words to continue</string>
     <string name="all_copy_link">COPY LINK</string>
     <string name="ss_story_link_copied">Story link copied</string>
+    <string name="ss_image_loading_msg">Please wait for story background to be loaded</string>
 </resources>
