--- a/MyCity4Kids/WordPressEditor/src/main/res/values/strings.xml
+++ b/MyCity4Kids/WordPressEditor/src/main/res/values/strings.xml
@@ -82,5 +82,7 @@
     <string name="string_draft">Draft</string>
     <string name="string_publish">Publish</string>
     <string name="app_settings">App Settings</string>
+    <string name="select_category">Select Category</string>
+
 
 </resources>
