event for popup and valid insta text is added

--- a/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
@@ -1302,4 +1302,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="ss_coachmark_story_bg">Select background of your choice</string>
     <string name="ss_coachmarks_text_style">Change font size or text alignment</string>
     <string name="article_editor_min_words_body">You have written %1$d words. Please write at least 300 words to publish.</string>
+    <string name="enter_valid_instagram_campaign_detail_fragment_popup">Please enter a valid Instagram handle</string>
 </resources>
