--- a/app/src/main/res/values-te/strings.xml
+++ b/app/src/main/res/values-te/strings.xml
@@ -1304,4 +1304,6 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="article_editor_min_words_body">You have written %1$d words. Please write at least 300 words to publish.</string>
     <string name="enter_valid_instagram_campaign_detail_fragment_popup">Please enter a valid Instagram handle</string>
     <string name="select_category">Select Category</string>
+    <string name="app_settings_change_pass_toast_new_pass_min_length">Please enter minimum 6 characters</string>
+    <string name="app_settings_change_pass_toast_same_pass">New password cannot be same as your old password.</string>
 </resources>
