facebook friends and invite contacts flow

--- a/app/src/main/res/values-gu/strings.xml
+++ b/app/src/main/res/values-gu/strings.xml
@@ -1420,4 +1420,6 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="app_settings_change_pass_toast_new_pass_min_length">Please enter minimum 6 characters</string>
   <string name="app_settings_change_pass_toast_same_pass">New password cannot be same as your old password.</string>
   <string name="collection">COLLECTION</string>
+  <string name="groups_user_block_success">User blocked successfully</string>
+  <string name="permission_contact_rationale">This permission is needed to invite your contact via sms.</string>
 </resources>
