--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1474,7 +1474,6 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="app_settings_change_pass_toast_new_pass_min_length">Please enter minimum 6 characters</string>
   <string name="app_settings_change_pass_toast_same_pass">New password cannot be same as your old password.</string>
   <string name="collection">COLLECTION</string>
-<<<<<<< HEAD
   <string name="groups_user_block_success">User blocked successfully</string>
   <string name="permission_contact_rationale">This permission is needed to invite your contact via sms.</string>
   <string name="draft_instagram_submission">Draft Instagram submission</string>
@@ -1482,7 +1481,6 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="order_screenshot">Order screenshot</string>
   <string name="pre_meet_submission">Pre-meet submission</string>
   <string name="unlisted_video_link">Unlisted video link</string>
-=======
->>>>>>> collection icon removed from listing and added into menu item
+  <string name="invite_contact_invitation_sent">Your invite has been sent!</string>
 </resources>
 
