--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -1335,165 +1335,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="order_screenshot">Order screenshot</string>
   <string name="pre_meet_submission">Pre-meet submission</string>
   <string name="unlisted_video_link">Unlisted video link</string>
-    <string name="mom_vlog_banner_title">मॉम व्हिलॉग चॅलेंज अलर्ट</string>
-    <string name="mom_vlog_banner_subtitle">और जीतें 10000 रुपए तक के पुरस्कार</string>
-    <string name="mom_vlog_banner_button">वीडियो अपलोड करें</string>
-
-    //Join group dialog screen
-    <string name="join_dialog_heading">अपनी पहली पोस्ट लिखें</string>
-    <string name="join_dialog_ask_question">प्रश्न पूछें या अपने विचार शेयर करें</string>
-
-    <string name="join_group">ग्रुप में शामिल हों</string>
-    <string name="user_funny_video.edit_title">टाइटल एडिट करें</string>
-    <string name="user_funny_video.vlog_title_hint">अपने  व्लॉग का टाइटल यहाँ लिखें</string>
-    <string name="editor_saving">आपकी पोस्ट सेव हो रही है&#8230;</string>
-    <string name="select_thumbnail">अपने व्लॉग के लिए एक थंबनेल का चुनाव करें</string>
-    <string name="audio_delay_msg">Playing your audio might take afew seconds</string>
-    <string name="write_something">कुछ लिखें</string>
-    <string name="join_dialog_post">प्रकाशित</string>
-    <string name="spell_check_error">We found a few errors in the article</string>
-    <string name="application_end_date">आवेदन की अंतिम तिथि</string>
-    <string name="submission_end_date">सबमिट करने की अंतिम तिथि</string>
-    <string name="submit_article">Submit Your Article</string>
-
-    <!--pending-->
-    <string name="participate_earn_mymoney">MyMoney कैम्पेन्स में भाग लें और कमाई करें</string>
-    <string name="tap_to_create">पोस्ट करने के लिए यहाँ क्लिक करें</string>
-    <string name="private_profile_read_article">पोस्ट्स पढ़ें</string>
-    <string name="mymoney_profile">MyMoney प्रोफाइल</string>
-    <string name="choose_from_gallery">Choose image from gallery</string>
-    <string name="capture_from_camera">Capture image from camera</string>
-    <string name="add_a_choice">Add a choice</string>
-    <string name="invite_referral_screen">Give 25, Get 25!</string>
-
-    <string name="rewards_edit">एडिट करें</string>
-    <string name="rewards_yes">हाँ</string>
-    <string name="rewards_no">नहीं</string>
-    <string name="rewards_expected_date_delivery">डिलीवरी की संभावित तिथि</string>
-    <string name="add_instagram_handle">इंस्टाग्राम हैंडल ऐड करें</string>
-    <string name="enter_paytm_number">कृपया अपना पेटीएम रजिस्टर्ड मोबाइल नंबर दर्ज करें</string>
-    <string name="note_detail_in_english">कृपया अपनी बैंक डिटेल्स केवल अंग्रेजी में दर्ज करें</string>
-    <string name="campaign_details_ineligible">अयोग्य</string>
-    <string name="track_status">स्टेट्स ट्रैक करें</string>
-    <string name="please_apply">Please Apply First</string>
-    <string name="referral_code_alert_message">The referral code you entered was incorrect. Click OK to continue without referral code.</string>
-    <string name="alert_message_title">Message</string>
-    <string name="it_is_a_long_established_fact_that_a_reader">It is a long established fact that a reader.</string>
-    <string name="lorem_ipsum">Lorem Ipsum</string>
-    <string name="click_here_to_participate">Click here to participate</string>
-    <string name="check_ypur_eligibility">Check your eligibility now</string>
-    <string name="check_campaigns_available_for_you">Check campaigns available for you</string>
-    <string name="earnings_reimbursement">Reimbursement</string>
-    <string name="sorry_not_eligible">Sorry, you\'re not eligible.</string>
-    <string name="campaign_list_sorry_not_eligible">Give MyMoney a try!</string>
-    <string name="try_following_campaign">Try the following campaign instead!</string>
-    <string name="campaign_list_try_following_campaign">Participate in your first campaign now!</string>
-    <string name="topics">TOPICS</string>
-    <string name="badges">Badges</string>
-    <string name="profile_setting">Profile settings</string>
-    <string name="accounts">Accounts</string>
-    <string name="profile_my_collections">मेरा कलेक्शन </string>
-    <string name="profile_view_all_collections">सब देखें </string>
-    <string name="profile_add_new">नया जोड़ें </string>
-    <string name="profile_featured_more">+%d More</string>
-    <string name="all_drafts">Drafts</string>
-    <string name="all_story">100 Word Story</string>
-    <string name="all_blogs">Blogs</string>
-    <string name="all_videos">Videos</string>
-    <string name="profile_post_featured">Post featured on the following collections</string>
-    <string name="dialog_fragment_add_collection_select_collection">कलेक्शन का चुनाव करें</string>
-    <string name="no_collections_yet">no collections yet</string>
-    <string name="collection_created_tab">बनाई गई</string>
-    <string name="collection_followed_tab">फॉलो की गई</string>
-    <string name="visible_to_all">visible to all</string>
-    <string name="please_add_collection_name">कृपया कलेक्शन का नाम जोड़ें</string>
-    <string name="thumbnail">थंबनेल</string>
-    <string name="collection_change_image_in_edit_collection">बदलाव करें</string>
-    <string name="no_collection_items">no items</string>
-    <string name="list_of_content">कंटेंट की लिस्ट</string>
-    <string name="edit_collection">कलेक्शन एडिट करें</string>
-    <string name="delete_collection">कलेक्शन हटायें</string>
-    <string name="are_you_sure_you_want_to_delete_the_collection">क्या आप ने निश्चय कर लिया कि आप अपनी कलेक्शन डिलीट करना चाहते हैं</string>
-    <string name="add_collection_name">Add collection name</string>
-    <string name="profile_share_the_joy">Share the Joy</string>
-    <string name="dialog_confirm_delete">Are you sure you want to delete this collection</string>
-    <string name="all_view">View</string>
-    <string name="all_analytics">Analytics</string>
-    <string name="read_articles">READ ARTICLES</string>
-    <string name="empty_followers_in_profile">The people who follow your profile will show here</string>
-    <string name="empty_followers_in_collection">The people who follow your collection will show here</string>
-    <string name="no_collection_item_text">The articles you add to this collection will show here</string>
-    <string name="badges_winner_share_text">%1$s %2$s is a %3$s badge winner | Momspresso\n%4$s</string>
-    <string name="crown_winner_share_text">%1$s %2$s is a %3$s crown winner | Momspresso\n%4$s</string>
-    <string name="add_thumbnail">थंबनेल जोड़ें</string>
-    <string name="profile_emailid">Email Id</string>
-    <string name="profile_blog_title">Blog Title</string>
-    <string name="child_delete">Delete</string>
-    <string name="profile_name_optional">Name (optional)</string>
-    <string name="profile_expected_date_delivery">Expected date of delivery</string>
-    <string name="mymoney_info">MyMoney Dashboard</string>
-    <string name="profile_empty_created_content">The content you create will show here</string>
-    <string name="profile_empty_bookmarks">The articles you bookmark will show here</string>
-    <string name="profile_empty_featured">Your featured articles will show here</string>
-    <string name="profile_empty_read_article">The articles you have read will show here</string>
-    <string name="profile_empty_read_stories">The stories you have read will show here</string>
-    <string name="profile_empty_seen_videos">The videos you have seen will show here</string>
-    <string name="profile_empty_drafts">All your drafts will show here</string>
-    <string name="profile_empty_following">The people who you follow will show here</string>
-    <string name="login_verify_sms">Verify</string>
-    <string name="login_send_otp">Send OTP</string>
-    <string name="login_enter_mobile_number">Enter your mobile number</string>
-    <string name="login_enter_otp">Please enter OTP below</string>
-    <string name="login_resend_otp">Resend OTP</string>
-    <string name="login_remaining_time">Seconds remaining: %1$d</string>
-    <string name="add_to_collection">Add to Collection</string>
-    <string name="profile_follow_author">Follow %1$s on Momspresso! \n %2$s</string>
-    <string name="analytics_lang_rank">आपकी रैंक \nइन %1$s</string>
-    <string name="analytics_milestones">MILESTONES</string>
-    <string name="badges_list_share_text">Checkout %1$s\'s achievements on Momspresso! \n%2$s</string>
-    <string name="milestones_share_text">%1$s\'s %2$s \'%3$s\' got %4$s! | Momspresso \n%5$s</string>
-    <string name="campaigns">Campaigns</string>
-    <string name="refer_text">Refer</string>
-    <string name="mm_dialog_get_started_now">GET STARTED NOW</string>
-    <string name="mm_dialog_description">You can now earn by participating in branded MyMoney campaigns</string>
-    <string name="mm_dialog_title">Welcome to Momspresso!</string>
-    <string name="milestones_dialog_title">You\'ve earned Rs. %1$d</string>
-    <string name="milestones_share_joy">Share the joy with your friends and earn more! %1$s</string>
-    <string name="all_terms_conditions"><![CDATA[T&C]]></string>
-    <string name="milestone_mm_share">I earned Rs.%1$d from Momspresso MyMoney and you can earn too! Simply register using my code %2$s and complete your first campaign. It\'s that simple, so register now! \n%3$s</string>
-    <string name="all_refer_url">https://www.momspresso.com/usersprofile/rewardsform?referrer=%1$s</string>
-    <string name="please_add_item_multicollection_activity">Please Add Items</string>
-    <string name="all_report_content">REPORT CONTENT</string>
-    <string name="background">पृष्ठभूमि</string>
-    <string name="text">टेक्स्ट</string>
-    <string name="size">आकार</string>
-    <string name="align">स्थिति</string>
-    <string name="short_s_max_title_word">Your title can have maximum 10 words.</string>
-    <string name="editor.next">अगली</string>
-    <string name="max_limit">आप शब्दों के फॉन्ट साइज की अधिकतम सीमा तक पहुँच चुके हैं</string>
-    <string name="min_limit">आप शब्दों के फॉन्ट साइज की न्यूनतम सीमा तक पहुँच चुके हैं</string>
-    <string name="library">लाइब्रेरी</string>
-    <string name="ss_share_with_friends">दोस्तों के साथ शेयर करें</string>
-    <string name="short_s_add_title_Optional">वैकल्पिक</string>
-    <string name="story_text_description_hint">यहां आप सुविचार (कोट्स) लिख सकते हैं|</string>
-    <string name="stroy_overflow_layout">आगे बढ़ने के लिए कृपया अपने टेक्स्ट का फॉण्ट साइज़ या कहानी को छोटा करें</string>
-    <string name="short_s_write">लिखें</string>
-    <string name="ss_follow_author">Follow %1$s and check out other articles by her on Momspresso.\n %2$s</string>
-    <string name="all_insta_share_clipboard_msg">Caption copied. Please paste before posting on Instagram.</string>
-    <string name="moderation_or_share_story_moderation_message">आपकी कहानी मोडरेशन प्रक्रिया में है ,आपको आपकी कहानी  की स्थिति के  बारे में अगले 24 घंटे में  मेल किया जाएगा</string>
-    <string name="ad.bottom_bar.instagram">इन्स्टाग्राम</string>
-    <string name="editor_minimum_word_limit">Please write at least %1$d words to continue</string>
-    <string name="all_copy_link">COPY LINK</string>
-    <string name="ss_story_link_copied">Story link copied</string>
-    <string name="ss_image_loading_msg">Please wait for story background to be loaded</string>
-    <string name="story_coachmark_text">Position or move your story around as per your preference.</string>
-    <string name="story_got_it">Got it</string>
-    <string name="ss_coachmark_story_bg">Select background of your choice</string>
-    <string name="ss_coachmarks_text_style">Change font size or text alignment</string>
-    <string name="article_editor_min_words_body">You have written %1$d words. Please write at least 300 words to publish.</string>
-    <string name="enter_valid_instagram_campaign_detail_fragment_popup">Please enter a valid Instagram handle</string>
-    <string name="select_category">Select Category</string>
-    <string name="app_settings_change_pass_toast_new_pass_min_length">Please enter minimum 6 characters</string>
-    <string name="app_settings_change_pass_toast_same_pass">New password cannot be same as your old password.</string>
-  <string name="collection">COLLECTION</string>
+  <string name="invite_contact_invitation_sent">Your invite has been sent!</string>
 </resources>
