--- a/app/src/main/res/values-mr/strings.xml
+++ b/app/src/main/res/values-mr/strings.xml
@@ -1312,4 +1312,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="order_screenshot">Order screenshot</string>
   <string name="pre_meet_submission">Pre-meet submission</string>
   <string name="unlisted_video_link">Unlisted video link</string>
+  <string name="invite_contact_invitation_sent">Your invite has been sent!</string>
 </resources>
