--- a/app/src/main/res/values-kn/strings.xml
+++ b/app/src/main/res/values-kn/strings.xml
@@ -936,7 +936,6 @@
   <string name="choose_video_categories_text">CATEGORIES</string>
   <string name="group_detail_activity_toast_text">ನೀವು ಅನಾಮಿಕ ಆಗಿ ಪೋಸ್ಟ್ ಮಾಡಬಹುದು</string>
   <string name="group_add_comment_text">ADD COMMENT</string>
-  <string name="group_invite_text">ಆಮಂತ್ರಿಸಿ</string>
   <string name="group_comment_type_here_text">Type here</string>
   <string name="group_comment_be_the_first_text">Be the first one to comment</string>
   <string name="add_text_or_media_group_post_activity_tooltip_text">ಆಡಿಯೋ ಪೋಸ್ಟ್ ಮಾಡಿ</string>
@@ -1356,4 +1355,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="unlisted_video_link">Unlisted video link</string>
   <string name="invite_contact_invitation_sent">Your invite has been sent!</string>
     <string name="add_video_details_title_length_error">Title length should be less than 150 characters</string>
+  <string name="all_search">Search</string>
+  <string name="all_send_invite">Send Invite</string>
+  <string name="phone_contact_toolbar_title">Phonebook Contacts</string>
+  <string name="all_invite">ಆಮಂತ್ರಿಸಿ</string>
 </resources>
