--- a/app/src/main/res/values-gu/strings.xml
+++ b/app/src/main/res/values-gu/strings.xml
@@ -981,7 +981,6 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="reply_groups">જવાબ આપો</string>
   <string name="group_detail_activity_toast_text">તમે નામ અનામત રાખી શકો છો </string>
   <string name="group_add_comment_text">ટીપ્પણી જોડો</string>
-  <string name="group_invite_text">આમંત્રો</string>
   <string name="group_comment_type_here_text">અહીં ટાઇપ કરો</string>
   <string name="group_comment_start_type_here_text">ટાઇપ કરવાનું શરુ કરો </string>
   <string name="group_comment_be_the_first_text">ટીપ્પણી કરનારા પ્રથમ બનો</string>
@@ -1429,4 +1428,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="unlisted_video_link">Unlisted video link</string>
   <string name="invite_contact_invitation_sent">Your invite has been sent!</string>
     <string name="add_video_details_title_length_error">Title length should be less than 150 characters</string>
+  <string name="all_search">Search</string>
+  <string name="all_send_invite">Send Invite</string>
+  <string name="phone_contact_toolbar_title">Phonebook Contacts</string>
+  <string name="all_invite">આમંત્રો</string>
 </resources>
