--- a/app/src/main/res/values-ml/strings.xml
+++ b/app/src/main/res/values-ml/strings.xml
@@ -1008,7 +1008,6 @@
   //groupdetail Activity toast String
   <string name="group_detail_activity_toast_text">അജ്ഞാതനായി പോസ്റ്റ് ചെയ്യാം</string>
   <string name="group_add_comment_text">ADD COMMENT</string>
-  <string name="group_invite_text">ക്ഷണിക്കൂ</string>
   <string name="group_comment_type_here_text">ഇവിടെ ടൈപ്പ് ചെയ്യുക</string>
   <string name="group_comment_be_the_first_text">Be the first one to comment</string>
 
@@ -1360,4 +1359,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="unlisted_video_link">Unlisted video link</string>
   <string name="invite_contact_invitation_sent">Your invite has been sent!</string>
     <string name="add_video_details_title_length_error">Title length should be less than 150 characters</string>
+  <string name="all_search">Search</string>
+  <string name="all_send_invite">Send Invite</string>
+  <string name="phone_contact_toolbar_title">Phonebook Contacts</string>
+  <string name="all_invite">ക്ഷണിക്കൂ</string>
 </resources>
