--- a/app/src/main/res/values-mr/strings.xml
+++ b/app/src/main/res/values-mr/strings.xml
@@ -960,7 +960,6 @@
   //groupdetail Activity toast String
   <string name="group_detail_activity_toast_text">आपण अज्ञात पोस्ट देखील करू शकता </string>
   <string name="group_add_comment_text">टिप्पण्या जोडा</string>
-  <string name="group_invite_text">आमंत्रण</string>
   <string name="group_comment_type_here_text">Type here</string>
   <string name="group_comment_be_the_first_text">प्रथम टिप्पणी करणारे व्हा</string>
 
@@ -1314,4 +1313,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="unlisted_video_link">Unlisted video link</string>
   <string name="invite_contact_invitation_sent">Your invite has been sent!</string>
     <string name="add_video_details_title_length_error">Title length should be less than 150 characters</string>
+  <string name="all_search">Search</string>
+  <string name="all_send_invite">Send Invite</string>
+  <string name="phone_contact_toolbar_title">Phonebook Contacts</string>
+  <string name="all_invite">आमंत्रण</string>
 </resources>
