--- a/app/src/main/res/values-pa/strings.xml
+++ b/app/src/main/res/values-pa/strings.xml
@@ -1047,7 +1047,6 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   //groupdetail Activity toast String
   <string name="group_detail_activity_toast_text">You can also post anonymously </string>
   <string name="group_add_comment_text">ADD COMMENT</string>
-  <string name="group_invite_text">Invite</string>
   <string name="group_comment_type_here_text">ਇੱਥੇ ਟਾਈਪ ਕਰੋ</string>
   <string name="group_comment_start_type_here_text">ਟਾਈਪ ਕਰਨਾ ਸ਼ੁਰੂ ਕਰੋ</string>
   <string name="group_comment_be_the_first_text">ਸਭ ਤੋਂ ਪਿਹਲਾਂ ਕ੍ਮੇਂਟ ਕਰੋ</string>
@@ -1378,4 +1377,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="unlisted_video_link">Unlisted video link</string>
   <string name="invite_contact_invitation_sent">Your invite has been sent!</string>
     <string name="add_video_details_title_length_error">Title length should be less than 150 characters</string>
+  <string name="all_search">Search</string>
+  <string name="all_send_invite">Send Invite</string>
+  <string name="phone_contact_toolbar_title">Phonebook Contacts</string>
+  <string name="all_invite">Invite</string>
 </resources>
