--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -958,7 +958,6 @@
   //groupdetail Activity toast String
   <string name="group_detail_activity_toast_text">பெயர் குறிப்பிடாமல் பதிவிடலாம் </string>
   <string name="group_add_comment_text">கமென்ட்ஸ் சேர்க்கவும்</string>
-  <string name="group_invite_text">அழைக்கவும்</string>
   <string name="group_comment_type_here_text">Type here</string>
   <string name="group_comment_be_the_first_text">முதலில் கருத்து தெரிவிக்கவும்</string>
 
@@ -1312,4 +1311,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="unlisted_video_link">Unlisted video link</string>
   <string name="invite_contact_invitation_sent">Your invite has been sent!</string>
     <string name="add_video_details_title_length_error">Title length should be less than 150 characters</string>
+  <string name="all_search">Search</string>
+  <string name="all_send_invite">Send Invite</string>
+  <string name="phone_contact_toolbar_title">Phonebook Contacts</string>
+  <string name="all_invite">அழைக்கவும்</string>
 </resources>
