--- a/app/src/main/res/values-ml/strings.xml
+++ b/app/src/main/res/values-ml/strings.xml
@@ -1363,4 +1363,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="all_send_invite">Send Invite</string>
   <string name="phone_contact_toolbar_title">Phonebook Contacts</string>
   <string name="all_invite">ക്ഷണിക്കൂ</string>
+  <string name="detail_scroll_survey">Scroll to see survey link</string>
 </resources>
