--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -1341,4 +1341,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="phone_contact_toolbar_title">Phonebook Contacts</string>
   <string name="all_invite">आमंत्रित करें</string>
   <string name="detail_scroll_survey">Scroll to see survey link</string>
+  <string name="editor_help_mail">Mail Us</string>
+  <string name="editor_help_header_text">अपनी समस्या हमें मेल करें</string>
+  <string name="get_help_bottom_text">हमारी सपोर्ट टीम आपकी सहायता करेगी।</string>
+  <string name="detail_take_survey">Take survey</string>
 </resources>
