--- a/app/src/main/res/values-ml/strings.xml
+++ b/app/src/main/res/values-ml/strings.xml
@@ -1364,4 +1364,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="phone_contact_toolbar_title">Phonebook Contacts</string>
   <string name="all_invite">ക്ഷണിക്കൂ</string>
   <string name="detail_scroll_survey">Scroll to see survey link</string>
+  <string name="editor_help_mail">Mail Us</string>
+  <string name="editor_help_header_text">സഹായം വേണോ?</string>
+  <string name="get_help_bottom_text">നിങ്ങളുടെ പ്രശ്നം ഞങ്ങൾക്ക് മെയിൽ ചെയ്യുക, അതുവഴി ഞങ്ങൾക്ക് നിങ്ങളെ സഹായിക്കാനാകും.</string>
+  <string name="detail_take_survey">Take survey</string>
 </resources>
