--- a/app/src/main/res/values-mr/strings.xml
+++ b/app/src/main/res/values-mr/strings.xml
@@ -1318,4 +1318,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="phone_contact_toolbar_title">Phonebook Contacts</string>
   <string name="all_invite">आमंत्रण</string>
   <string name="detail_scroll_survey">Scroll to see survey link</string>
+  <string name="editor_help_mail">Mail Us</string>
+  <string name="editor_help_header_text">मदत मिळवा?</string>
+  <string name="get_help_bottom_text">कृपया आम्हाला तुमची समस्या पाठवा म्हणजे आम्ही तुमची मदत करू शकू.</string>
+  <string name="detail_take_survey">Take survey</string>
 </resources>
